# rag-her

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  estrategia-chunking-vectorizacion.md  pyproject.toml
.claude/: hookify.block-dangerous-rm.local.md  hookify.block-destructive-git.local.md  hookify.block-drop-database.local.md  hookify.block-migration-delete.local.md  hookify.block-pr-to-main.local.md  hookify.block-push-main.local.md  hookify.warn-sensitive-files.local.md  product-marketing-context.md  settings.json
.claude/.worktrees_active/: feature-issue-122  feature-issue-56  feature-issue-57  feature-issue-58  feature-issue-63  feature-issue-65  feature-issue-66  feature-issue-67  feature-issue-68  feature-issue-69  feature-issue-70  feature-issue-73  feature-issue-EPIC-002
.claude/agents/: backend-developer.md  backend-test-engineer.md  mlops-engineer.md  project-coordinator.md  qa-criteria-validator.md  sentry-pipeline-engineer.md  ui-ux-analyzer.md  vertex-ai-architect.md
.claude/commands/: local-plan.md  (+12 more)
alembic/: env.py
app/: config.py  db.py  dependencies.py  main.py
docs/: issues.md  proposal.md
estimation_samples/: booking_system.json  corporate_website.json  crm_saas.json  ecommerce_platform.json  edtech_lms.json  erp_manufacturing.json  fintech_dashboard.json  food_delivery.json  healthcare_telemedicine.json  hr_recruitment.json  iot_monitoring.json  logistics_fleet.json  mobile_fitness_app.json  real_estate_marketplace.json  social_content_platform.json
issues/: 006-01-update-docs-frontend-path.md  006-02-extract-design-system.md  006-03-base-html-structure.md  EPIC-000-setup-entorno.md  EPIC-001-migracion-gemini.md  EPIC-002-modelos-datos.md  EPIC-003-speech-stt-tts.md  EPIC-004-checkin-empleado.md  EPIC-005-consulta-ceo.md  EPIC-006-frontend-hexagonal.md  EPIC-007-limpieza-legacy.md  EPIC-008-poc-v2-mejoras-post-demo.md  TEMPLATE.md
scripts/: seed_data.py
tests/: conftest.py
transcriptions/: booking_system.txt  ecommerce.txt  erp_manufacturing.txt  food_delivery.txt  healthcare_telemedicine.txt  real_estate_marketplace.txt
(+139 files in other folders)
